--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "child_process": "^1.0.2",
     "cors": "^2.8.5",
     "express": "^4.17.3",
+    "html": "^1.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.9",
     "nodemon": "^2.0.15",
