--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cheerio": "^1.0.0-rc.10",
     "child_process": "^1.0.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "html": "^1.0.0",
     "jsonwebtoken": "^8.5.1",
